# livraria-django

./: .env_exemplo  README.md  livraria_bkp.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_initial.py  0002_livro_capa.py  0003_compra.py  0003_itenscompra_preco_item.py  0003_livro_autores.py  0004_compra_data.py  0005_compra_tipo_pagamento.py
livraria/models/: autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  compra.py  livro.py
livraria/views/: autor.py  categoria.py  compra.py  editora.py  livro.py  usuario.py
uploader/migrations/: 0001_initial.py
usuario/: models.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0002_usuario_tipo_usuario.py
